# kyosync

./: .gitignore  Cargo.toml  HARNESS.md  Justfile  scatch.md
apps/kyoso_agent/: Cargo.toml
apps/kyoso_agent/src/: handle.rs  lib.rs  mutate.rs  navigate.rs  query.rs  scan.rs  tools.rs  walk.rs  watch.rs
apps/kyoso_agent/tests/: descriptor.rs  pattern.rs  traits.rs  traversal.rs  typed_reads.rs
apps/kyoso_circuit_client/: Cargo.toml
apps/kyoso_circuit_client/src/: grid_manager.rs  handlers.rs  layer_manager.rs  lib.rs  presence.rs  scene.rs
apps/kyoso_circuit_client/src/msg/: command.rs  duplex.rs  event.rs  global_channel.rs  graph.rs  mod.rs  sync.rs
apps/kyoso_circuit_client/src/tool/: connect.rs  mod.rs  place.rs  select.rs
apps/kyoso_circuit_client/src/ui/: hotkey.rs  mod.rs  toolbar.rs
apps/kyoso_circuit_client/tests/: two_clients.rs
apps/kyoso_client/: Cargo.toml
apps/kyoso_client/src/: handlers.rs  lib.rs  presence.rs  scene.rs  weave.rs
apps/kyoso_client/src/msg/: command.rs  duplex.rs  event.rs  global_channel.rs  graph.rs  mod.rs  sync.rs
apps/kyoso_client/src/tool/: connect.rs  create.rs  mod.rs  select.rs
apps/kyoso_client/src/ui/: hotkey.rs  mod.rs  toolbar.rs
apps/kyoso_client/tests/: duplex_round_trip.rs
apps/kyoso_server/: Cargo.toml
apps/kyoso_server/benches/: handler.rs
apps/kyoso_server/migrations/: 0001_initial.sql
apps/kyoso_server/src/: config.rs  error.rs  lib.rs  main.rs  model.rs  router.rs  shutdown.rs
apps/kyoso_server/src/handlers/: health.rs  mod.rs  room_ws.rs
apps/kyoso_server/src/services/: handler.rs  mod.rs  room.rs  scheduler.rs  store.rs
apps/kyoso_server/tests/: multi_model.rs  reconnect.rs  tier_rejection.rs  two_clients.rs
crates/kyoso_agent_py/: Cargo.toml  pyproject.toml
crates/kyoso_agent_py/src/: lib.rs
crates/kyoso_agent_rpc/: Cargo.toml
crates/kyoso_agent_rpc/src/: lib.rs
crates/kyoso_camera/: Cargo.toml
crates/kyoso_camera/src/: lib.rs  render_layer.rs  rig.rs
crates/kyoso_camera/src/controller/: mod.rs  pan_orbit_camera.rs
crates/kyoso_camera/src/raycast/: analytical_plane_picking.rs  mod.rs  primitive.rs
crates/kyoso_circuit/: Cargo.toml
crates/kyoso_circuit/src/: edge.rs  layer.rs  lib.rs  plugin.rs
crates/kyoso_circuit/src/components/: capacitor.rs  ground.rs  inductor.rs  mod.rs  resistor.rs  voltage_source.rs
crates/kyoso_comments_crdt/: Cargo.toml
crates/kyoso_comments_crdt/benches/: backend.rs
crates/kyoso_comments_crdt/src/: backend.rs  lib.rs  op.rs  snapshot.rs
crates/kyoso_comments_crdt/tests/: sync.rs
crates/kyoso_comments_sync/: Cargo.toml
crates/kyoso_comments_sync/src/: lib.rs  plugin.rs  resource.rs
crates/kyoso_comments_sync/tests/: two_apps.rs
crates/kyoso_core/: Cargo.toml
crates/kyoso_core/examples/: replicate_smoke.rs
crates/kyoso_core/src/: descriptor.rs  frame.rs  lib.rs  node.rs  paint.rs  plugin.rs  query_data.rs  rectangle.rs  scene_world.rs  size.rs  text.rs  typestyle.rs
crates/kyoso_core/tests/: pattern.rs  replication.rs  scene.rs  scene_world.rs  traversal.rs
crates/kyoso_crdt/: Cargo.toml
crates/kyoso_crdt/benches/: primitives.rs
crates/kyoso_crdt/src/: backend.rs  context.rs  delta.rs  envelope.rs  id.rs  lattice.rs  lib.rs  log.rs  model.rs  op.rs  opaque.rs  protocol.rs  schema.rs  topology.rs
crates/kyoso_crdt/src/types/: causal_map.rs  lww.rs  mod.rs  move_tree.rs  or_set.rs  pn_counter.rs  sequence.rs
crates/kyoso_crdt/tests/: derive_schema.rs  proptest_lattice.rs  proptest_opaque.proptest-regressions  proptest_opaque.rs
crates/kyoso_crdt_derive/: Cargo.toml
crates/kyoso_crdt_derive/src/: lib.rs
crates/kyoso_drag/: Cargo.toml
crates/kyoso_drag/src/: lib.rs  three_d.rs  two_d.rs
crates/kyoso_figma/: Cargo.toml
crates/kyoso_figma/examples/: replicate_smoke.rs
crates/kyoso_figma/src/: descriptor.rs  frame.rs  import.rs  lib.rs  node.rs  paint.rs  plugin.rs  query_data.rs  rectangle.rs  size.rs  text.rs  typestyle.rs  visitor.rs  walker.rs
crates/kyoso_figma/tests/: import.rs  replication.rs
crates/kyoso_graph/: Cargo.toml
crates/kyoso_graph/docs/: edges_and_subgraphs.md
crates/kyoso_graph/examples/: scene_tree.rs
crates/kyoso_graph/src/: algo.rs  commands.rs  components.rs  cost.rs  descriptor.rs  ecs_view.rs  edge_taxonomy.rs  lib.rs  pattern.rs  queries.rs  queries_tests.rs  scene.rs  solver.rs  subgraph.rs  subgraph_tests.rs  transaction.rs  traverse.rs  tree.rs  variant.rs
crates/kyoso_graph/src/domain/: mod.rs
crates/kyoso_graph/tests/: cross_view.rs
crates/kyoso_graph_crdt/: Cargo.toml
crates/kyoso_graph_crdt/benches/: backend.rs
crates/kyoso_graph_crdt/src/: backend.rs  document.rs  edge_category.rs  graph_backend.rs  invariants.rs  lib.rs  op.rs  snapshot.rs  topology.rs  view.rs
crates/kyoso_graph_crdt/tests/: composition.rs  edge_schema.rs  move_race.rs  proptest_invariants.rs  proptest_snapshot.proptest-regressions  proptest_snapshot.rs  sync.rs
crates/kyoso_graph_sync/: Cargo.toml
crates/kyoso_graph_sync/examples/: peer.rs  scene_2d.rs
crates/kyoso_graph_sync/src/: builtin_schemas.rs  category.rs  engine.rs  index.rs  lib.rs  plugin.rs  schema_sync.rs  structural.rs
crates/kyoso_graph_sync/tests/: derived_schema.rs  two_apps.rs
crates/kyoso_loadgen/: Cargo.toml
crates/kyoso_loadgen/src/: findings.rs  lib.rs  sim.rs
crates/kyoso_polyline/: Cargo.toml
crates/kyoso_polyline/examples/: animated.rs  basic.rs  materials.rs  perspective.rs  shapes.rs
crates/kyoso_polyline/src/: lib.rs  material.rs  polyline.rs
crates/kyoso_scenarios/: Cargo.toml
crates/kyoso_scenarios/src/: capture.rs  harness.rs  lib.rs  report.rs  scenarios.rs  timeline.rs
crates/kyoso_sync/: Cargo.toml
crates/kyoso_sync/examples/: peer.rs  scene_2d.rs
crates/kyoso_sync/src/: builtin_schemas.rs  category.rs  client.rs  component_sync.rs  engine.rs  index.rs  lib.rs  plugin.rs  schema.rs  schema_sync.rs  sequence_diff.rs  transport.rs
crates/kyoso_sync/tests/: derived_schema.rs  two_apps.rs
crates/kyoso_sync_derive/: Cargo.toml
crates/kyoso_sync_derive/src/: lib.rs
(+63 files in other folders)
