[package]
name = "kyoso_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stateful WebSocket coordinator for kyoso_crdt-replicated graphs"

[dependencies]
kyoso_crdt          = { workspace = true }
kyoso_graph_crdt    = { workspace = true }
kyoso_comments_crdt = { workspace = true }

# Web framework
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio   = { workspace = true }
futures = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Data
serde      = { workspace = true }
serde_json = { workspace = true }
dashmap    = { workspace = true }
postcard   = { workspace = true }

# Errors
thiserror = { workspace = true }

# Persistence
sqlx        = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-tungstenite   = { workspace = true }
kyoso_comments_crdt = { workspace = true }
kyoso_graph_crdt    = { workspace = true }
criterion           = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "handler"
harness = false

[[bin]]
name = "kyoso_server"
path = "src/main.rs"
