[package]
name = "kyoso_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bevy-native, Figma-shaped document model — Frame/Rectangle/Text components, SceneNode/SceneEdge markers, and a SchemaSync-backed sync plugin"

[dependencies]
kyoso_sync       = { workspace = true }
kyoso_graph_sync = { workspace = true }
kyoso_crdt       = { workspace = true }
kyoso_graph      = { workspace = true }

bevy          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
kyoso_server       = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
