[package]
name = "kyoso_crdt"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CRDT replication layer for kyoso_graph: op log, diffs, server-mediated sync"

[dependencies]
kyoso_crdt_derive  = { workspace = true }
serde              = { workspace = true }
schemars           = { workspace = true }
postcard           = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "primitives"
harness = false
