[package]
name = "kyoso_figma"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Figma REST API → kyoso_core ECS import adapter"

[dependencies]
kyoso_core  = { workspace = true }
kyoso_graph = { workspace = true }

bevy      = { workspace = true }
tracing   = { workspace = true }
figma-api = { workspace = true }

[lints]
workspace = true
