[package]
name = "kyoso_graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Graph data + ECS infrastructure (directed graph + tree primitives, async solver)"

[dependencies]
bevy = { workspace = true }
kyoso_graph_crdt = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
kyoso_crdt = { workspace = true }

[lints]
workspace = true

[[example]]
name = "scene_tree"
path = "examples/scene_tree.rs"
