[package]
name = "kyoso_graph_sync"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bevy ECS plugin for the graph CRDT model. Sits on top of kyoso_sync's multi-model transport."

[dependencies]
kyoso_crdt       = { workspace = true }
kyoso_graph      = { workspace = true }
kyoso_graph_crdt = { workspace = true }
kyoso_sync       = { workspace = true }

bevy     = { workspace = true }
postcard = { workspace = true }
serde    = { workspace = true }
tracing  = { workspace = true }

[dev-dependencies]
kyoso_server       = { workspace = true }
axum               = { workspace = true }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }

# For the windowed `scene_2d` example: pulls Bevy's default plugin set
# (windowing, rendering, sprites, picking) on top of the workspace's
# default-disabled bevy.
bevy           = { workspace = true, features = ["default"] }
kyoso_polyline = { workspace = true }
kyoso_drag     = { workspace = true }
kyoso_camera   = { workspace = true }

[lints]
workspace = true

[[example]]
name = "peer"
path = "examples/peer.rs"

[[example]]
name = "scene_2d"
path = "examples/scene_2d.rs"
