[package]
name = "kyoso_sync"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-model transport for kyoso_crdt: WsClient, SyncTransportPlugin, ModelRegistry, PeerIdGen, presence. Per-model Bevy plugins live in their own crates (kyoso_graph_sync, kyoso_comments_sync)."

[dependencies]
kyoso_crdt        = { workspace = true }
kyoso_sync_derive = { workspace = true }

bevy              = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
postcard          = { workspace = true }
serde             = { workspace = true }
futures           = { workspace = true }
crossbeam-channel = { workspace = true }
tracing           = { workspace = true }
thiserror         = { workspace = true }

[lints]
workspace = true
